# vk_mandelbrot

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glfw_initialization.cpp.27B1B87F8DB68285.idx  glfw_initialization.h.DF62A3E3786B2BE9.idx  main.cpp.5AA4FFB9AE0F56FC.idx  precomp.h.C879EFFF0F35AF2C.idx
source/include/: glfw_initialization.h  glfw_monitor.h  glfw_window.h  graphics.h  precomp.h  utils.h
source/src/: glfw_initialization.cpp  glfw_monitor.cpp  glfw_window.cpp  graphics.cpp  main.cpp  utils.cpp
